# workshop-tutorial

./: README.md  pyproject.toml
01-first-agent/: 01-first-agent.ipynb
02-tools/01-using-mcp-tools/: mcp-agent.ipynb
02-tools/02-custom-tools/: custom-tools-with-strands-agents.ipynb
03-agent-as-tool/: agent-as-tools.ipynb  agents-as-tools-interleaved.ipynb
05-swarm-agent/: swarm.ipynb
06-advance-processing-agent-response/: advanced_processing_agent_response.ipynb
07-guardrail-integration/: bedrock_guardrails_sample.ipynb
activities/: README-ACTIVITY1.md  README-ACTIVITY2.md  README-ACTIVITY3.md  README-ACTIVITY4.md  README-ACTIVITY6.md  README-ACTIVITY7.md
