[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.58",
    "ddgs>=9.6.1",
    "fastapi>=0.120.0",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "mcp>=1.19.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.12.3",
    "strands-agents>=1.13.0",
    "strands-agents-tools>=0.2.12",
    "uv>=0.9.5",
    "uvicorn>=0.38.0",
]
